[tool.poetry]
name = "rosharan-date"
version = "0.1.0"
description = ""
authors = ["Adrian Miguel <adriantmiguel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

streamlit = "1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
